--- a/wagtail/admin/templates/wagtailadmin/shared/collection_chooser.html
+++ b/wagtail/admin/templates/wagtailadmin/shared/collection_chooser.html
@@ -1,6 +1,6 @@
 {% load i18n l10n wagtailadmin_tags %}
 
-<li>
+<li class="{{ li_classes }}">
     <div class="field choice_field select">
         <label for="collection_chooser_collection_id">{% trans "Collection" %}:</label>
         <div class="field-content">
