--- a/wagtail/images/templates/wagtailimages/images/index.html
+++ b/wagtail/images/templates/wagtailimages/images/index.html
@@ -53,14 +53,14 @@
         <form class="image-search search-bar" action="{% url 'wagtailimages:index' %}" method="GET" novalidate>
             <ul class="fields">
                 <li>
-                    <ul class="field-row">
+                    <ul class="grid">
                         {% if collections %}
-                            {% include "wagtailadmin/shared/collection_chooser.html" with li_classes="field-col col4" %}
+                            {% include "wagtailadmin/shared/collection_chooser.html" with li_classes="" %}
                             {% if current_tag %}
                                 <input type="hidden" name="tag" value="{{ current_tag }}" />
                             {% endif %}
                         {% endif %}
-                        <li class="field-col col4">
+                        <li class="">
                             <div class="field choice_field select">
                                 <label for="order_images_by">{% trans "Sort by" %}:</label>
                                 <div class="field-content">
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="field-col col4">
+                        <li class="">
                             <div class="field choice_field select">
                                 <label for="entries_per_page">{% trans "Entries per page" %}:</label>
                                 <div class="field-content">
